# military_spending

./: .gitignore  01_get_data.py  01_get_sipri_data.py  01_update_country_list.py  02_clean_data.py  02_map_codes  02_transform_sipri_data.py  03_get_sipri_data.py  04_transform_sipri_data  04_transform_sipri_data.py  05_eda_sipri.py  Dockerfile  README.md  analysis_eda_sipri.py  app.py  country_list.py  eda_sipri.py  get_sipri_data.py  helper_analysis_eda_sipri.py  helper_plotly_graphs.py  helper_update_country_list.py  main.py  pyproject.toml  requirements.txt
helper/: mili_spending.jpg:Zone.Identifier
wb_data/: clean_military_data.csv  country.csv  data_profiling.html  get_wb_military.csv  get_wb_military_old.csv  map_codes.csv  map_country_region.csv  military_data.csv
