[project]
name = "military-spending"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.0",
    "nbformat>=5.10.4",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.45.0",
    "wbgapi>=1.0.12",
    "ydata-profiling>=4.16.1",
]
